--- a/index.html
+++ b/index.html
@@ -23,12 +23,6 @@
     </tr>
   </table>
   <hr size=5 noshade>
-  <!--<h3>Education</h3>
-  <ul>
-    <li>National Institute of Technology Silchar</li>
-    <li>Cotton University</li>
-    <li>Kendriya Vidyalaya</li>
-  </ul>-->
   <h3>Education</h3>
   <table cellspacing="10">
     <tbody>
@@ -48,26 +42,12 @@
   </table>
   <hr>
   <h3>Skills</h3>
-
-  <table cellspacing="10">
-    <tr>
-      <td>C</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>C++</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Data Structures and Algorithms</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Web Development</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-  </table>
-
+   <ul>
+    <li>C</li>
+    <li>C++</li>
+    <li>Data Structures and Algorithms</li>
+    <li>Web Development</li>
+  </ul>
   <hr>
   <h3>Hobbies</h3>
   <ul>
